Bug 454396 - Kickoff does not find application whose name was edited via 'Edit application' window and then removed from Shortcut KCM
Summary: Kickoff does not find application whose name was edited via 'Edit application...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: 5.24.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-25 14:53 UTC by Patrick Silva
Modified: 2022-08-17 16:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-05-25 14:53:15 UTC
SUMMARY
Can reproduce on Arch and neon unstable.


STEPS TO REPRODUCE
1. search for 'ark' with kickoff
2. right-click on 'ark' search result and choose 'Edit application...'
3. click on 'Application' tab, edit the 'Name' field to '1Ark' and click on 'OK' button
4. open Shortcuts KCM
5. click on '+ Add application...' button
6. search for '1Ark', select it and click on 'OK" button - '1Ark' was added to 'Applications' list
7. remove '1Ark' from the applications list by clicking on its button with trash icon
8. click on 'Apply' button
9. search for '1Ark' with kickoff

OBSERVED RESULT
kickoff does not find '1Ark'

EXPECTED RESULT
kickoff finds '1Ark'

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-05-26 17:53:24 UTC
Can reproduce. Seems like the Shortcuts KCM is deleting the custom desktop file created using KMenuEdit.
Comment 2 Bug Janitor Service 2022-08-16 18:26:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kglobalaccel/-/merge_requests/54
Comment 3 Nicolas Fella 2022-08-17 16:09:49 UTC
Git commit dcdcf6351304119811c227faea5b0031d51af6fd by Nicolas Fella.
Committed on 17/08/2022 at 16:08.
Pushed by nicolasfella into branch 'master'.

Don't set NoDisplay when cleaning up service components

For desktop files in /usr/share/kglobalaccel this is unneeded

For desktop files in .local/share/applications this is outright destructive since it causes the app to no longer be displayed in the start menu

M  +0    -3    src/runtime/kserviceactioncomponent.cpp

https://invent.kde.org/frameworks/kglobalaccel/commit/dcdcf6351304119811c227faea5b0031d51af6fd