Don't set NoDisplay when cleaning up service components

For desktop files in /usr/share/kglobalaccel this is unneeded

For desktop files in .local/share/applications this is outright destructive since it causes the app to no longer be displayed in the start menu

BUG: 454396